fixed overflow issue in css 2

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Paytone+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
+body {
+  overflow: hidden;
+}
 .App__content {
   background-color: #7247bc;
   margin-top: 2em;
@@ -9,7 +12,7 @@
 }
 
 .navbar {
-  font-family: "Paytone One", sans-serif;
+  font-family: 'Paytone One', sans-serif;
   margin-left: 1.7em;
 }
 header {
